[package]
name = "route-error"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A common error response for Axum servers"
keywords = ["axum", "error", "error-handling"]
categories = ["web-programming::http-server"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/route-error"
readme = "README.md"
documentation = "https://docs.rs/route-error/latest/route-error"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18" }
serde = { version = "1.0.164", features = ["derive"] }
