[package]
name = "axum-route-error"
version = "4.0.0"
edition = "2021"
license = "MIT"
description = "A common error response for Axum servers"
keywords = ["axum", "error", "error-handling"]
categories = ["web-programming::http-server"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/axum-route-error"
readme = "README.md"
documentation = "https://docs.rs/axum-route-error/latest/axum-route-error"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axum = { version = "0.6.18" }
serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1.37"

[dev-dependencies]
hyper = { version = "0.14.27", features = ["client", "http1"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
