[package]
name = "axum-route-error"
version = "5.0.1"
edition = "2021"
license = "MIT"
description = "A common error response for Axum servers"
keywords = ["axum", "error", "error-handling"]
categories = ["web-programming::http-server"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/axum-route-error"
readme = "README.md"
documentation = "https://docs.rs/axum-route-error/latest/axum-route-error"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
hyper = { version = "1.1", features = ["client", "http1"] }
http-body-util = "0.1"
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
